# fraud-detection-system

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
data/address_reference/: .gitkeep
data/ssn_issuance/: .gitkeep
docker/: Dockerfile  docker-compose.yml
models/bust_out/: .gitkeep
models/gnn/: .gitkeep
models/synthetic_scorer/: .gitkeep
notebooks/: 01_identity_graph_eda.ipynb  02_synthetic_patterns.ipynb  03_bust_out_analysis.ipynb  04_model_evaluation.ipynb
scripts/: evaluate_detection.py  generate_synthetic_data.py  train_bust_out_model.py  train_synthetic_scorer.py
src/: __init__.py
src/api/: dependencies.py  main.py  websocket.py
src/config/: settings.py
src/detection/: __init__.py  authorized_user.py  bust_out_predictor.py  credit_behavior.py  ensemble.py  synthetic_scorer.py  velocity_analyzer.py
src/graph/: __init__.py  cluster_detector.py  entity_resolution.py  gnn_model.py  graph_features.py  identity_graph.py
src/identity_elements/: __init__.py
src/ingestion/: __init__.py  application_consumer.py  bureau_connector.py  consortium_receiver.py  dark_web_monitor.py
src/investigation/: __init__.py  case_manager.py  consortium_reporter.py  graph_visualizer.py  identity_report.py  sar_generator.py
src/monitoring/: __init__.py  bust_out_tracker.py  metrics.py  model_performance.py
tests/: test_api.py  test_bureau_connector.py  test_device_fingerprinting.py  test_ensemble_integration.py  test_graph_features.py  test_ssn_validator.py  test_synthetic_scorer.py  test_velocity_analyzer.py
(+30 files in other folders)
